# autogen

./: pyproject.toml
samples/apps/autogen-studio/: main.py
samples/apps/autogen-studio/autogenstudio/: chatmanager.py  datamodel.py
samples/apps/autogen-studio/autogenstudio/utils/: dbdefaults.json
samples/apps/autogen-studio/autogenstudio/utils/skill_samples/: search_files_as_string.py  search_function_as_string.py  search_in_repo_as_string.py
samples/apps/autogen-studio/frontend/: package.json  pnpm-lock.yaml
