[tool.poetry]
name = "autogen-fork"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
pyautogen = "^0.2.10"
autogens = {path = "C:/Users/sanju/Documents/My-Projects/Source/Autogens"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
